// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Details of Weather отображение города отображается корректно 1`] = `
<div
  className="det"
>
  <p>
    Wind 3 m/s
  </p>
  <p>
    overcast clouds
  </p>
  <p>
    Pressure 1011 hpa
  </p>
  <p>
    Humidity 66 %
  </p>
  <p>
    Coordinates [54.73, 55.95]
  </p>
</div>
`;

exports[`Details of Weather ошибка при получении города отображается корректно 1`] = `
<div
  className="det"
>
  <p />
  <p />
  <p />
  <p />
  <p />
</div>
`;
